--- a/RideServiceGroup3.Web/Pages/Shared/_Layout.cshtml
+++ b/RideServiceGroup3.Web/Pages/Shared/_Layout.cshtml
@@ -30,12 +30,12 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="Index">Hjem</a></li>
+                    <li><a href="/Index">Hjem</a></li>
                 </ul>
-                <form>                   
+                @*<form>                   
                         <input type="text" asp-for="SearchString" />
                         <input type="submit" value="Søg" />
-                </form>
+                </form>*@
             </div>
         </div>
     </nav>
